# KMR_myActuator

./: .gitignore  CMakeLists.txt  README.md
changeID/: CMakeLists.txt  setID.cpp
docs/: CMakeLists.txt  Doxyfile.in
docs/markdown_sources/: mainpage.md  setup.md
include/: config.hpp  listener.hpp  motor_handler.hpp  p1_parser.hpp  p1_writer.hpp  p2_writer.hpp  utils.hpp  writer.hpp
scripts/: setMotorID_protocol1.sh
source/: listener.cpp  motor_handler.cpp  p1_parser.cpp  p1_writer.cpp  p2_parser.cpp  p2_writer.cpp  utils.cpp  writer.cpp
